--- a/P006824.opf/meta.yml
+++ b/P006824.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1CZ2485
   title: ཕྱག་ཆེན་ལྷན་ཅིག་སྐྱེས་སྦྱོར་ཟབ་དོན་ལམ་གྱི་སྙིང་པོ་གྲུབ་ཐོབ་བརྒྱུད་པའི་ཞལ་ལུང་
   author: ''
-  volumes: {}
+  volumes:
+    97c8171bac31423db59592d0c9fbf129:
+      image_group_id: I1CZ2495
+      title: ''
+      volume_number: 1
+      total_pages: 534
