--- a/P006824.opf/layers/v001/Pagination.yml
+++ b/P006824.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 61102704772a4abab4aa254461c80238
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d5561a5005494bb6a2cad27dc198b60a:
