--- a/P006824.opf/meta.yml
+++ b/P006824.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P006824
 initial_creation_type: ocr
+created_at: 26/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1CZ2485
   title: ཕྱག་ཆེན་ལྷན་ཅིག་སྐྱེས་སྦྱོར་ཟབ་དོན་ལམ་གྱི་སྙིང་པོ་གྲུབ་ཐོབ་བརྒྱུད་པའི་ཞལ་ལུང་
