--- a/P006824.opf/meta.yml
+++ b/P006824.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P006824
 initial_creation_type: ocr
 created_at: 26/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:25:04.364244
 source_metadata:
   id: bdr:W1CZ2485
   title: ཕྱག་ཆེན་ལྷན་ཅིག་སྐྱེས་སྦྱོར་ཟབ་དོན་ལམ་གྱི་སྙིང་པོ་གྲུབ་ཐོབ་བརྒྱུད་པའི་ཞལ་ལུང་
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 534
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
